:bug: fix: Page overflow handled correctly

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -46,6 +46,8 @@ body {
 
 main {
   width: 100%;
+  height: 100vh;
+  overflow: auto;
 }
 
 h1 {
